force-app/main/default/objects/HS_Inbound_Cursor__c/HS_Inbound_Cursor__c.object-meta.xml
<CustomObject>
    <description
  >Poll watermark for the inbound (HubSpot to Salesforce) direction: one row per (SObject, portal). Custom Metadata cannot be written from Apex, so the cursor cannot live there -- this object plays the same "Apex must remember something between runs" role that HS_Sync_Tombstone__c already plays for deletes. Reports and search are ON because these rows are the primary operational answer to "is inbound running, and how far has it got?".</description>
    <label>HS Inbound Cursor</label>
    <nameField>
        <label>HS Inbound Cursor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HS Inbound Cursors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>