force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Cursor_Key__c.field-meta.xml
<CustomField>
    <fullName>Cursor_Key__c</fullName>
    <description
  >SObject_Name__c + '|' + Portal__c. Unique and an External Id so the batch can Database.upsert by this key with no pre-query -- which also makes a duplicate row impossible if two runs ever race.</description>
    <externalId>true</externalId>
    <label>Cursor Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>