force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Last_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Message__c</fullName>
    <description
  >Short human-readable detail for the last run. Full failure detail lives in PortalSyncDeadLetter__c.</description>
    <label>Last Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>