force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <description
  >When this (object, portal) was last polled, regardless of outcome.</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>