force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Last_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Status__c</fullName>
    <description
  >Outcome of the last run: OK, Failed, or Deferred (hit Inbound_Max_Pages__c with more to fetch). Plain Text, so new outcomes need no metadata change.</description>
    <label>Last Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>