force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Paused__c.field-meta.xml
<CustomField>
    <fullName>Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Per-(object, portal) kill switch. Checking it stops polling that one combination immediately, with no deploy and without disabling inbound for the whole object. The watermark is left untouched, so unpausing resumes exactly where it stopped.</description>
    <label>Paused</label>
    <type>Checkbox</type>
</CustomField>