force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <description
  >HubSpot portal this cursor tracks. Deliberately plain Text, not a restricted picklist: PortalSyncDeadLetter__c.Portal__c is restricted and that constraint has already shaped the engine's code, so cursor rows should not inherit it.</description>
    <label>Portal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>