force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Records_Applied__c.field-meta.xml
<CustomField>
    <fullName>Records_Applied__c</fullName>
    <description
  >Records the last run actually wrote to Salesforce (created or updated). Zero is normal and expected when nothing changed in HubSpot.</description>
    <label>Records Applied</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>