force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Records_Seen__c.field-meta.xml
<CustomField>
    <fullName>Records_Seen__c</fullName>
    <description
  >HubSpot records returned by the last run. Compare against Records_Applied__c: a large Seen with a near-zero Applied is the healthy steady state (the engine is recognising its own outbound echo and doing nothing).</description>
    <label>Records Seen</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>