force-app/main/default/objects/HS_Inbound_Cursor__c/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description
  >Salesforce object this cursor tracks (e.g. Account).</description>
    <label>SObject Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>