force-app/main/default/objects/HS_Inbound_Cursor__c/fields/Watermark__c.field-meta.xml
<CustomField>
    <fullName>Watermark__c</fullName>
    <description
  >High-water mark: the newest HubSpot modified-date safely processed for this (object, portal). The next poll filters on this MINUS Inbound_Overlap_Seconds__c. Never moves backwards, and is not written at all when the search callout itself failed.</description>
    <label>Watermark</label>
    <type>DateTime</type>
</CustomField>